--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,12 @@
 name = "run-that"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Davide Ghilardi <dghila@d71.dev>"]
+description = "Run scripts from centralized repo"
+keywords = [ "cli", "tool", "script", "runner" ]
+repository = "https://github.com/dghilardi/run-that"
+license = "MIT"
+readme = "README.md"
 
 [dependencies]
 clap = { version = "4.2.7", features = ["derive"] }
