--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,7 @@ readme = "README.md"
 anyhow = "1.0.71"
 clap = { version = "4.2.7", features = ["derive"] }
 config = "0.13.3"
+dirs = "5.0.1"
 serde = "1.0.163"
+sha256 = "1.1.3"
 update-informer = "1.0.0"
