--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,11 @@ readme = "README.md"
 
 [dependencies]
 anyhow = "1.0.71"
+chrono = { version = "0.4.24", features = ["serde"] }
 clap = { version = "4.2.7", features = ["derive"] }
 config = "0.13.3"
 dirs = "5.0.1"
 serde = "1.0.163"
 sha256 = "1.1.3"
+toml = "0.7.4"
 update-informer = "1.0.0"
